[package]
name = 'pallet-chain-space'
description = 'Manage Chain Spaces.'
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies]
sp-core = { features = ["std"], workspace = true }
sp-keystore = { features = ["std"], workspace = true }
cord-utilities = { features = ["mock"], workspace = true }

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
bitflags = { workspace = true }

# Internal dependencies
cord-primitives = { workspace = true }
cord-utilities = { workspace = true }
identifier = { workspace = true }

# Substrate dependencies
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { optional = true, workspace = true }
sp-io = { optional = true, workspace = true }
sp-keystore = { optional = true, workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }


[features]
default = ['std']
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "cord-utilities/runtime-benchmarks",
]
std = [
    "codec/std",
    "identifier/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "cord-primitives/std",
    "cord-utilities/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-keystore/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "identifier/try-runtime",
    "cord-utilities/try-runtime",
    "sp-runtime/try-runtime",
]
