[package]
name = "pallet-collective"
version = "0.9.0"
authors = [
	"Parity Technologies <admin@parity.io>",
	"Dhiway Networks <info@dhiway.com>",
]
edition = "2021"
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"
description = "Collective system: Members of a set of account IDs can make their collective feelings known through dispatched calls from one of two specialized origins."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.17", default-features = false }

network-membership = { package = "network-membership", path = "../../primitives/network-membership", default-features = false }
pallet-network-membership = { package = "pallet-network-membership", path = "../../pallets/network-membership", default-features = false }
frame-benchmarking = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0", default-features = false, optional = true }
frame-system = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0", default-features = false }
frame-support = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0", default-features = false }
sp-io = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0", default-features = false }

[dev-dependencies]
rand = "0.8"

[features]
default = ["std"]
std = [
	"codec/std",
	"network-membership/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-network-membership/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
