[package]
name = "pallet-config"
description = 'Set network configuration parameters.'
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dev-dependencies]
sp-io = { workspace = true }
maplit = { workspace = true }

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
cord-primitives = { workspace = true }

# Substrate dependencies
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { optional = true, workspace = true }
frame-benchmarking = { optional = true, workspace = true }

[features]
default = ['std']
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"cord-primitives/std",
	"frame-system/std",
	"frame-benchmarking?/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
