[package]
name = "pallet-credit-treasury"
version = '0.7.10'
edition = '2021'
authors = ['Dhiway Networks <info@dhiway.com>']
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"
description = "Treasury Module to handle transaction credit splits"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.30", default-features = false }
sp-runtime = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.30", default-features = false }
frame-support = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.30", default-features = false }
frame-system = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.30", default-features = false }


[features]
default = ["std"]
runtime-benchmarks = [
 
]
std = [
  "codec/std",
  "scale-info/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
]
